Archive2/a0/a33ba406388689/output
main.cpp: In destructor 'virtual Derived::~Derived()':
main.cpp:3:23: error: use of deleted function 'static void Derived::operator delete(void*)'
    virtual ~Derived(){}                                                                      
                       ^
main.cpp:4:16: error: declared here
    static void operator delete(void*) = delete;                                                     
                ^
main.cpp: In destructor 'virtual Derived::~Derived()':
main.cpp:3:23: error: use of deleted function 'static void Derived::operator delete(void*)'
    virtual ~Derived(){}                                                                      
                       ^
main.cpp:4:16: error: declared here
    static void operator delete(void*) = delete;                                                     
                ^
