Archive2/a0/a33ba406388689/main.cpp
struct Derived                                                                               
{                                                                                            
   virtual ~Derived(){}                                                                      
   static void operator delete(void*) = delete;                                                     
};                                                                                           
                                                                                             
                                                                                             
int main()                                                                                   
{                                                                                            
}  